去掉了上方的返回按钮

--- a/src/main/resources/static/pdfjs/web/viewer.html
+++ b/src/main/resources/static/pdfjs/web/viewer.html
@@ -47,13 +47,13 @@ http://sourceforge.net/adobe/cmap/wiki/License/
   </head>
 
   <body tabindex="1" class="loadingInProgress">
-  <div class="panel panel-default">
+  <!-- <div class="panel panel-default">
     <div class="panel-body form-group" style="margin-bottom:0px;background-color: #b3b3b3">
       <div class="col-sm-12">
         <a type="button" class="btn btn-primary"  onclick="window.history.go(-2);"><i class="glyphicon glyphicon-chevron-left"></i>&nbsp;返回</a>
       </div>
     </div>
-  </div>
+  </div> -->
     <div id="outerContainer">
 
       <div id="sidebarContainer">
